dclone package version history

Version 1.2-2, October 21, 2010

Version 1.2-1, August 26, 2010
    * experimenting with bugs.parfit:
      the different seeds approach is not satisfactory
      because it cannot garantee independence of the chains
    * seed arg added to bugs.fit
    * RNG option added to work with snowWrapper
    * set.rng arg added to snowWrapper that calls
      snow::clusterSetupRNG
    * options for dclone reworked: can be accessed via
      the pdoptions function, and it sets the pdoptions option
    * dclone.dcdim: dimnames bug fixed when drop=TRUE
    * examples added on inits specifications for *.parfit

Version 1.2-0, August 26, 2010
    * polishing plot methods for R Journal paper.
    * citation entry added.

Version 1.1-1, May 6, 2010
    * print.custommodel has deparse=FALSE argument.
    * glm module for JAGS >2.0 is loaded at startup
    * parallel RNG handling reworked.
    * dctable fix for one parameter mcmc.list.
    * dcdiag returns r.hat for one parameter models.

Version 1.1-0, May 3, 2010
    * dclone was tested with JAGS 2.0.
    * major release submitted to CRAN.

Version 1.0-7, April 7, 2010
    * added flavour argument in dc.parfit.
    * methods for mcmc objects added (coef, vcov, quantile).
    * plot.dcdiag got log.lambda.max option.
    * log.var type of plot.dctable changed.

Version 1.0-6, March 14, 2010
    * openbugs.seed removed.
    * bugs.fit fixed, several arguments removed.
    * dcpar package merged with dclone.
    * WinBUGS/OpenBUGS related revision done:
      as.mcmc.list.bugs and dc.fit now works properly.
    * dclone.ts removed, use dcdim instead.

Version 1.0-5, January 25, 2010
    * drop and perm arguments in dcdim.

Version 1.0-4, January 14, 2010
    * nclones.list: returns 'method' attributes.
    * vcov: got invfisher argument.
    * S3 methods added for diagnostic functions.
    * dclone options restructured.
    * dclone and dcpar split: parallet computing features