@@ -10,7 +10,7 @@ Description: Low level functions for implementing
     complex models using data cloning and Bayesian
     Markov chain Monte Carlo methods with support 
     for JAGS, WinBUGS and OpenBUGS.
-    The package supports parallel computations.
+    With some functions for parallel MCMC computations.
 License: GPL-2
 Depends: R (>= 2.7.0), rjags, coda (>= 0.13), R2WinBUGS, snow, rlecuyer
 Suggests: BRugs, rsprng
